[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eoap"
dynamic = ["version"]
description = 'Earth Observation Application Package'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
]
classifiers = []
dependencies = []

[project.urls]
Documentation = "https://github.com/eoap/eoap.github.io#readme"
Issues = "https://github.com/eoap/eoap.github.io/issues"
Source = "https://github.com/eoap/eoap.github.io"

[tool.hatch.version]
path = "src/eoap/__about__.py"

[tool.hatch.envs.docs]

dependencies = [
  "pdocs",
  "mkdocs-material",
  "mkdocs-jupyter",
  "mkdocs-minify-plugin"
]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy --force"